added login and register pages

--- a/TaskManager/src/styles.scss
+++ b/TaskManager/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background: url(https://st3.depositphotos.com/3268541/19470/v/1600/depositphotos_194703622-stock-illustration-blue-checklist-or-task-list.jpg);
+background-size: cover;
+}
