--- a/TaskManager/src/pages/login/login.component.scss
+++ b/TaskManager/src/pages/login/login.component.scss
@@ -7,3 +7,17 @@ h4{
   font-style: italic;
   color: rgb(11, 54, 119);
 }
+@media only screen and (min-width: 600px){
+  .form-login{
+    width: 50%;
+    margin: auto;
+    margin-top: 50px;
+  }
+  }
+  @media only screen and (max-width: 599px){
+    .form-login{
+      width: 90%;
+      margin: auto;
+      margin-top: 10px;
+    }
+    }
