--- a/TaskManager/src/pages/register/register.component.scss
+++ b/TaskManager/src/pages/register/register.component.scss
@@ -1,4 +1,4 @@
-.form-login{
+.form-register{
   border-radius: 20px;
   background:rgba(102, 255, 153, 0.3);
   padding: 10px;
@@ -8,14 +8,14 @@ h4{
   color: rgb(11, 151, 58);
 }
 @media only screen and (min-width: 600px){
-.form-login{
+.form-register{
   width: 50%;
   margin: auto;
   margin-top: 50px;
 }
 }
 @media only screen and (max-width: 599px){
-  .form-login{
+  .form-register{
     width: 90%;
     margin: auto;
     margin-top: 10px;
