--- a/TaskManager/src/components/task/task.component.html
+++ b/TaskManager/src/components/task/task.component.html
@@ -12,7 +12,8 @@
       </option>
     </select>
     <button (click)="sendTask(val.value)" data-toggle="modal" data-target="#myModal_2">Share</button>
-    <div *ngIf="!shareTask" class="text-danger">Please choose user</div>
+    <div *ngIf="notShareTask" class="text-danger">Please choose user</div>
+    <div *ngIf="shareTask" class="text-success">Task was sent</div>
    </span>
   <button  class="btn btn-secondary" (click)="edit()">Edit</button>
 </div>
@@ -45,18 +46,6 @@
         </div>
           <button class="btn btn-danger" data-dismiss="modal" (click)="delete()">Delete</button>
           <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="shareTask" class="modal" id="myModal_2">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          Do you want share the task?
-        </div>
-          <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button class="btn btn-info" data-dismiss="modal" (click)="send()">Share</button>
       </div>
     </div>
   </div>
